@@ -289,6 +289,10 @@ IDLE
 Tests
 -----
 
+- Issue #18792: Use "127.0.0.1" or "::1" instead of "localhost" as much as
+  possible, since "localhost" goes through a DNS lookup under recent Windows
+  versions.
+
 - Issue #1666318: Add a test that shutil.copytree() retains directory
   permissions.  Patch by Catherine Devlin.
 
